force-app/main/default/objects/Kickback__c/Kickback__c.object-meta.xml
<CustomObject>
    <label>リベート</label>
    <nameField>
        <displayFormat>KB-{000000}</displayFormat>
        <label>KICKBACK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>