force-app/main/default/objects/Kickback__c/fields/AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>AccountingCode__c</fullName>
    <formula>PricingID__r.Accounting_Code__r.Name</formula>
    <inlineHelpText>Accounting Code is automatically from Pricing. If there is no Accounting code, please Accounting Code in Pricing.</inlineHelpText>
    <label>ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>