force-app/main/default/objects/Kickback__c/fields/BankAccountForKickback__c.field-meta.xml
<CustomField>
    <fullName>BankAccountForKickback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR KICKBACK PAYMENT</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>KICKBACK</relationshipLabel>
    <relationshipName>KICKBACK</relationshipName>
    <type>Lookup</type>
</CustomField>