force-app/main/default/objects/Kickback__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <inlineHelpText>Charge Unit is automatically synchronized from Number of Containers. Also can be edited manually.</inlineHelpText>
    <label>CHARGE UNIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>