force-app/main/default/objects/Kickback__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <inlineHelpText>Ex-rate for Kickback. If Default Invoice Issued Date(Default ‘Today’) in Shipment Order in the period of active EX-RATE Mgmt record, ex-rate is automatically synchronized.</inlineHelpText>
    <label>EXCHANGE RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>