force-app/main/default/objects/Kickback__c/fields/KickbackBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>KickbackBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>KICKBACK BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>