force-app/main/default/objects/Kickback__c/fields/KickbackCreditAccoutingCode__c.field-meta.xml
<CustomField>
    <fullName>KickbackCreditAccoutingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KICKBACK CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>KICKBACK (KICKBACK CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>KICKBACK_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>