force-app/main/default/objects/Kickback__c/fields/KickbackDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>KickbackDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KICKBACK DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>KICKBACK</relationshipLabel>
    <relationshipName>KICKBACK_DEBIT</relationshipName>
    <type>Lookup</type>
</CustomField>