force-app/main/default/objects/Kickback__c/fields/KickbackName__c.field-meta.xml
<CustomField>
    <fullName>KickbackName__c</fullName>
    <label>KICKBACK NAME</label>
    <type>TextArea</type>
</CustomField>