force-app/main/default/objects/Kickback__c/fields/KickbackRequester__c.field-meta.xml
<CustomField>
    <fullName>KickbackRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the person who ask Kickback</inlineHelpText>
    <label>KICKBACK REQUESTER</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.KickbackTo__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KICKBACK</relationshipLabel>
    <relationshipName>KICKBACK</relationshipName>
    <type>Lookup</type>
</CustomField>