force-app/main/default/objects/Kickback__c/fields/KickbackTo__c.field-meta.xml
<CustomField>
    <fullName>KickbackTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the company name which ask kickback</inlineHelpText>
    <label>KICKBACK TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KICKBACK</relationshipLabel>
    <relationshipName>KICKBACK</relationshipName>
    <type>Lookup</type>
</CustomField>