force-app/main/default/objects/Kickback__c/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <label>AMOUNT PAID-KICKBACK(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>