force-app/main/default/objects/Kickback__c/fields/PaidAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>PaidAmountUSD__c</fullName>
    <label>AMOUNT PAID-KICKBACK(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>