force-app/main/default/objects/Kickback__c/fields/PaymentNote__c.field-meta.xml
<CustomField>
    <fullName>PaymentNote__c</fullName>
    <label>PAYMENT NOTES-KICKBACK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>