force-app/main/default/objects/Kickback__c/fields/PaymentSettledDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettledDate__c</fullName>
    <label>PAYMENT SETTLED DATE-KICKBACK</label>
    <type>Date</type>
</CustomField>