force-app/main/default/objects/Kickback__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>PAYMENT TYPE-KICKBACK</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>