force-app/main/default/objects/Kickback__c/fields/PricingID__c.field-meta.xml
<CustomField>
    <fullName>PricingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Pricing related with Kickback</inlineHelpText>
    <label>PRICING ID</label>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipLabel>KICKBACK</relationshipLabel>
    <relationshipName>KICKBACK</relationshipName>
    <type>Lookup</type>
</CustomField>