force-app/main/default/objects/Kickback__c/fields/ShipmentOrder__c.field-meta.xml
<CustomField>
    <fullName>ShipmentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloFMS SHIPMENT ORDER ID</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>KICKBACK</relationshipLabel>
    <relationshipName>KICKBACK</relationshipName>
    <type>Lookup</type>
</CustomField>