force-app/main/default/objects/Kickback__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>TEXT(PricingID__r.Zeibunrui__c )</formula>
    <label>TAX</label>
    <type>Text</type>
</CustomField>