force-app/main/default/objects/Kickback__c/fields/TotalKickbackAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalKickbackAmount__c</fullName>
    <formula>ChargeUnit__c  *  UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF KICKBACK(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>