force-app/main/default/objects/Kickback__c/fields/TotalKickbackAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalKickbackAmountUSD__c</fullName>
    <formula>ChargeUnit__c  *  UnitPriceUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF KICKBACK(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>