force-app/main/default/objects/Kickback__c/fields/UnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceUSD__c</fullName>
    <label>UNIT PRICE OF KICKBACK(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>