force-app/main/default/objects/Kickback__c/fields/UnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalance__c</fullName>
    <formula>TotalKickbackAmount__c  -  PaidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF KICKBACK(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>