force-app/main/default/objects/Kickback__c/fields/UnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceUSD__c</fullName>
    <formula>TotalKickbackAmountUSD__c  -  PaidAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF KICKBACK(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>