force-app/main/default/objects/Kickback__c/recordTypes/KickbackToCustomer.recordType-meta.xml
<RecordType>
    <fullName>KickbackToCustomer</fullName>
    <active>true</active>
    <description>Kickback to customers to secure cargo</description>
    <label>KICKBACK TO CUSTOMER</label>
</RecordType>