force-app/main/default/objects/Kickback__c/recordTypes/KickbackToCustomsOfficer.recordType-meta.xml
<RecordType>
    <fullName>KickbackToCustomsOfficer</fullName>
    <active>true</active>
    <description>Kickback to Customs Officer to avoid inspection or process permission without delay</description>
    <label>KICKBACK TO CUSTOMS OFFICER</label>
</RecordType>