force-app/main/default/objects/Kickback__c/recordTypes/KickbackToVendor.recordType-meta.xml
<RecordType>
    <fullName>KickbackToVendor</fullName>
    <active>true</active>
    <description>Kickback to Vendor Sales Person to get competitive O/F</description>
    <label>KICKBACK TO VENDOR</label>
</RecordType>